--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Properties/launchSettings.json
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Properties/launchSettings.json
@@ -1,21 +1,14 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:17003",
-      "sslPort": 44349
-    }
-  },
+{
   "profiles": {
     "PRN221_GroupProjectBookParty": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7254;http://localhost:5152",
+      "launchUrl": "Authentication/Login",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7254;http://localhost:5152"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,6 +16,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:17003",
+      "sslPort": 44349
     }
   }
 }
