--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty.csproj
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty.csproj
@@ -14,10 +14,14 @@
     <Folder Include="Models\" />
     <Folder Include="Filters\" />
     <Folder Include="Constants\" />
+    <Folder Include="Pages\Admin\AdminAccount\" />
+    <Folder Include="Pages\Admin\Party\" />
+    <Folder Include="Pages\Host\HostBooking\" />
     <Folder Include="Pages\User\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="datatables.net-dt" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.28">
