--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty.csproj
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.26.2" />
     <PackageReference Include="datatables.net-dt" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.28" />
